<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise Launcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="login_button_label">Login</string>
    <string name="show_password_label">Show Password</string>
    <string name="toast_invalid_login">Login Failed</string>
    <string name="toast_valid_login">Login Success</string>
    <string name="coded_username">exercise</string>
    <string name="coded_password">almostdone</string>
    <string name="run_applist">Run Other Application</string>
    <string name="broken_alarmclock">Broken Alarm Clock</string>
    <string name="menu_logout">Logout</string>
    <string name="context_reset_text">Reset Text</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>

</resources>