<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/helloWorldText"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/helloWorldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/runAppListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_applist" />

        <Button
            android:id="@+id/brokenAlarmClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_alarmclock" />
    </LinearLayout>

</LinearLayout>