<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="@dimen/allpurpose_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username_label" />

        <EditText
            android:id="@+id/inputTextUsername"
            android:layout_width="@dimen/allpurpose_zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textSize="@dimen/font_small" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="@dimen/allpurpose_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/inputTextPassword"
            android:layout_width="@dimen/allpurpose_zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword"
            android:textSize="@dimen/font_small" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="10"
            android:gravity="end|center_vertical"
            android:text="@string/show_password_label" />

        <ToggleButton
            android:id="@+id/toggleShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_small"
            android:layout_gravity="end"
            android:layout_weight="1" >
        </ToggleButton>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small" >

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="@dimen/allpurpose_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_button_label" />
    </TableRow>

</TableLayout>